--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@solana/web3.js": "^0.71.10",
+    "@solana/web3.js": "0.73.0",
     "bn.js": "^5.1.2",
     "buffer-layout": "^1.2.0"
   },
